# itlackeys

./: .env.example  .gitignore  README.md  autogen_review_files.py  crew_markdown_review.py  crew_markdown_review_azure.py  crew_markdown_update.py  crew_review_code.py  crew_write_article.py  example.md  group_review_files.py  local.json  prompt.txt  pyproject.toml  requirements.txt  review_files.py  review_files.py.md  simple_example.py  write_article.py
code_companion/: cc.py  gpt4o_cc.py  requirements.txt
crew/: AiderCoderAgent.py  TeamCoach.py
itlackey_assistants/: example_code_execution.py
itlackey_assistants/scripts/: example_interpreter.py
itlackey_assistants/tools/: OpenInterpreterTool.py
tools/: AiderCoderTool.py  AiderCoderTools.py  GitCommitTool.py  MarkdownTools.py  MarkdownValidatorTool.py
utils/: llm_factory.py
write_tutorial/: article copy.md  article.md  article_crew.md  example.py  outline.md  tools.py  write_tutorial.py
write_tutorial/drafts/: article.md  ollama_outline.md  outline.md  outline_crewai.md
